# thegreatnykz

./: README.md  config.json  config.php  thegreatnykz.info  thegreatnykz.module
app/: NYKZ.class.js  index.html  readme.md
firebirdsrc/pythonBasedFirebirdAPI/: __init__.py
firebirdsrc/sjtubbs/beta/fweb2/modules/: CMakeLists.txt
firebirdsrc/sjtubbs/beta/fweb2/modules/.svn/: all-wcprops  entries
firebirdsrc/sjtubbs/beta/fweb2/modules/.svn/text-base/: shm.c.svn-base
firebirdsrc/sjtubbs/stable/fweb2/ntwww/: CMakeLists.txt  ntc_board.c  ntc_user.c  ntcinternal.h  ntw_foot.c  ntw_topmenu.c  ntwww.c  wscript
firebirdsrc/sjtubbs/stable/fweb2/ntwww/.svn/: all-wcprops  entries
firebirdsrc/sjtubbs/stable/fweb2/ntwww/.svn/text-base/: ntc_mail.h.svn-base  ntc_user.h.svn-base  ntc_utils.c.svn-base  ntc_utils.h.svn-base  ntcore.h.svn-base  ntw_login.c.svn-base  ntw_wapfoot.c.svn-base  ntw_waphead.c.svn-base  ntw_waplogin.c.svn-base  ntwtpl.h.svn-base
pyRestfulService/: README.md  run.sh  runtest.py
pyRestfulService/apis/: __init__.py  bbsallusers.py  bbsboard.py  bbsboardindex.py  bbscheck.py  bbslogin.py  bbsmail.py  bbspost.py  bbspostindex.py  bbsuser.py  bbsuserindex.py  includes.py
pyRestfulService/parsers/: PERM.py  __init__.py  board.py  boardAllow.py  boardDIR.py  checkPasswd.c  config.py  functions.py  mail.py  passwd.py  post.py  temp.txt
pyRestfulService/servers/: __init__.py  entrance.py
pyRestfulService/tests/: __init__.py  testParsers.py
resources/: nykz.class.inc  nykz.class.inc.test  nykzboard.inc  nykzpost.inc  nykzuser.inc
(+2820 files in other folders)
