SET(MODSHM "bbsshm")

SET(MODSHM_SRC shm.c)

SET_SRC_FILE_G_LOG_DOMAIN(modules/ "${MODSHM_SRC}")

INCLUDE_DIRECTORIES(AFTER ../ )

ADD_LIBRARY(${MODSHM} MODULE ${MODSHM_SRC})
SET_TARGET_PROPERTIES(${MODSHM} PROPERTIES COMPILE_FLAGS "${GLIB_CFLAG}")
INSTALL(TARGETS ${MODSHM} LIBRARY DESTINATION modules)

