
SET(WWWNAME "ntwww")

AUX_SOURCE_DIRECTORY(. PAGES_SRC)
SET_SRC_FILE_G_LOG_DOMAIN("${WWWNAME}/" "${PAGES_SRC}")
INCLUDE_DIRECTORIES(AFTER ../ ../modules ${CMAKE_BINARY_DIR}/tpl)

ADD_LIBRARY(${WWWNAME} MODULE ${PAGES_SRC})
ADD_DEPENDENCIES(${WWWNAME} tpl)
SET_TARGET_PROPERTIES(${WWWNAME} PROPERTIES COMPILE_FLAGS "${GLIB_CFLAG}")
INSTALL(TARGETS ${WWWNAME} LIBRARY DESTINATION pages)
